[tool.poetry]
name = "sds011lib"
version = "0.2.2"
description = "SDS011 Library"
authors = ["Tim Orme <TimothyOrme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.256"
black = "^23.1.0"
mypy = "^1.1.1"
types-pyserial = "^3.5.0.8"
myst-parser = "^1.0.0"
mkdocs = "^1.4.2"
mkdocs-gitbook = "^0.0.1"
mkdocs-material = "^9.1.8"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
tox = "^4.5.1"

[tool.ruff]
select = ["E", "F", "D"]
ignore = ["D203", "D213"]
line-length = 120

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D100", "D101", "D102", "D103", "D104" ]  # We dont need docstrings in tests

[[tool.mypy.overrides]]
module = "serial.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

